# 42_data_science

./: README.md
Module 00/ex00/: answers.txt
Module 00/ex05/: kata01.py  kata02.py  kata04.py
Module 00/ex07/: filterwords.py
Module 00/ex08/: sos.py
Module 00/ex10/: loading.py
Module 01/ex00/: book.py  recipe.py  test.py
Module 01/ex01/: game.py
Module 01/ex02/: vector.py
Module 01/ex03/: generator.py
Module 01/ex04/: eval.py
Module 01/ex05/: banking_test1.py  the_bank.py
Module 02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module 02/ex01/: main.py
Module 02/ex02/: logger.py
Module 02/ex03/: csvreader.py  header_hurricanes.csv  header_hurricanes_.csv  no_header_hurricanes.csv
Module 02/ex04/: README.md  pyproject.toml
Module 02/ex04/src/my_minipack/: logger.py
Module 02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
Module 02/ex05/: TinyStatistician.py
ex01/: exec.py
ex02/: whois.py
ex03/: count.py
ex04/: operations.py
ex05/: kata00.py  kata03.py
ex06/: recipe.py
ex09/: guess.py
